# odd-collector

./: Dockerfile  collector_config.yaml  domain_classes.plantuml  pyproject.toml
odd_collector/adapters/duckdb/: adapter.py
odd_collector/adapters/duckdb/grammar_parser/: field_types.lark  parser.py
odd_collector/adapters/duckdb/mappers/: types.py
odd_collector/domain/: plugin.py
odd_collector/models/: table.py
tests/integration/: data.duckdb  data1.duckdb  data2.duckdb  test_duckdb.py
