[tool.poetry]
name = "odd-collector"
version = "0.1.18"
description = "ODD Collector"
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>"]
keywords = [
    "Open Data Discovery",
    "Metadata",
    "Data Discovery",
    "Data Observability",
]
homepage = "https://github.com/opendatadiscovery/odd-collector"
repository = "https://github.com/opendatadiscovery/odd-collector"


[tool.poetry.dependencies]
funcy = "^2.0"
flatdict = "4.0.1"
lark-parser = "^0.12.0"
more-itertools = "8.13.0"
oddrn-generator = "^0.1.90"
python = "^3.9"
pytz = "^2022.7"
sql-metadata = "^2.6.0"
odd-collector-sdk = "^0.3.42"
odd-models = "^2.0.28"
duckdb = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^22.1.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["integration"]
